syntax = "proto3";

package secrets_grpc_proto.secrets.v1;

import "secrets/get-secret.proto";

service Secrets {
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse);
}
